--- a/category-page.html
+++ b/category-page.html
@@ -131,7 +131,13 @@
         <section class="smallpageinf">
             <div class="container">
                 <div class="smallpageinf__wrap">
-                    <img src="img/category/catpageimg.jpg" alt="img">
+                    <picture>
+                        <source srcset="img/category/catpageimg-mob.png" media="(max-width: 575px)">
+                        <img src="img/category/catpageimg.jpg" alt="img">
+                    </picture>
+                    
+
+                    <!-- catpageimg-mob -->
                     <h1>Product for special</h1>
                 </div>
             </div>
@@ -148,6 +154,9 @@
                             <li><a href="#">Berries</a></li>
                             <li><a href="#">Berries</a></li>
                         </ul>
+                        <div class="filterbtn">
+                            <i class="fa-solid fa-filter"></i>
+                        </div>
                     </div>
                     <div class="categorysect__head-right generalselect">
                         <select class="customselect" name="category">
@@ -159,9 +168,7 @@
                         </select>
                     </div>
 
-                    <div class="filterbtn">
-                        <i class="fa-solid fa-filter"></i>
-                    </div>
+                    
                 </div>
                 <div class="categorysect__discounts">
                     <a href="#">
@@ -430,7 +437,7 @@
 
                     <div class="categorysect__prodsect">
                         <div class="row">
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -453,7 +460,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -479,7 +486,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -502,7 +509,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -525,7 +532,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -548,7 +555,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -571,7 +578,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -594,7 +601,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -617,7 +624,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -640,7 +647,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -663,7 +670,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
@@ -686,7 +693,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-md-4">
+                            <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6">
                                 <div class="productbox">
                                     <a href="#">
                                         <div class="productbox__img">
