--- a/sitemap.html
+++ b/sitemap.html
@@ -22,6 +22,7 @@
             <li><a target="_blank" href="forgotpass.html">Forgot your Password</a></li>
             <li><a target="_blank" href="new-password.html">New Password</a></li>
             <li><a target="_blank" href="category-page.html">Category page</a></li>
+            <li><a target="_blank" href="product-page.html">Product page</a></li>
         </ul>
     </div>
 
