--- a/sitemap.html
+++ b/sitemap.html
@@ -23,6 +23,7 @@
             <li><a target="_blank" href="new-password.html">New Password</a></li>
             <li><a target="_blank" href="category-page.html">Category page</a></li>
             <li><a target="_blank" href="product-page.html">Product page</a></li>
+            <li><a target="_blank" href="send-feedback.html">Send feedback</a></li>
         </ul>
     </div>
 
