--- a/product-page.html
+++ b/product-page.html
@@ -130,7 +130,13 @@
         <section class="producttopsect">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
+                        <div class="productinfo mob">
+                            <h1 class="productinfo__name">
+                                Musclefit Pancake Proteico Preparato Fast facile e veloce 250g per la tua colazione Fit
+                                (Original)
+                            </h1>
+                        </div>
                         <div class="productslidersect">
                             <div class="slbigwrap">
                                 <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff"
@@ -223,7 +229,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="productinfo">
                             <h1 class="productinfo__name">
                                 Musclefit Pancake Proteico Preparato Fast facile e veloce 250g per la tua colazione Fit
@@ -288,7 +294,6 @@
                                     <b>Free 90-day returns</b>
                                 </p>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -1014,19 +1019,11 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
-
-
-
                 </div>
-
-
-
-
             </div>
         </section>
+
 
     </main>
 
@@ -1094,7 +1091,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
