--- a/send-feedback.html
+++ b/send-feedback.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+    <link rel="stylesheet" href="css/lib/imageuploadify.min.css" />
 
 
     <link rel="stylesheet" href="css/style.css">
@@ -234,7 +234,9 @@
                                 <label for="detailsfield">Details please! Your reviews help other shoppers</label>
                             </div>
 
-
+                            <div class="uploadphoto">
+                                    <input type="file" accept=".xlsx,.xls,image/*,.doc,audio/*,.docx,video/*,.ppt,.pptx,.txt,.pdf" multiple>
+                            </div>
 
 
 
@@ -316,11 +318,9 @@
 
 
     <script src="js/lib/jquery.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/lib/swiper.js"></script>
-    <script src="js/lib/zoomsl.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="js/lib/imageuploadify.min.js"></script>
 
     <script src="js/common.js"></script>
 </body>
