--- a/sitemap.html
+++ b/sitemap.html
@@ -24,6 +24,7 @@
             <li><a target="_blank" href="category-page.html">Category page</a></li>
             <li><a target="_blank" href="product-page.html">Product page</a></li>
             <li><a target="_blank" href="send-feedback.html">Send feedback</a></li>
+            <li><a target="_blank" href="cart-page.html">Cart page</a></li>
         </ul>
     </div>
 
