--- a/cart-page.html
+++ b/cart-page.html
@@ -121,7 +121,7 @@
         <div class="cartcontent">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8">
+                    <div class="col-lg-8">
                         <div class="cart__product">
                             <div class="cart__product-header">
                                 <div class="hselall">
@@ -173,6 +173,58 @@
                                         </button>
                                     </div>
                                 </div>
+                                <div class="cart__product-row">
+                                    <div class="cart__product-check">
+                                        <input type="checkbox" id="pc2">
+                                        <label for="pc2"></label>
+                                    </div>
+                                    <div class="cart__product-pr">
+                                        <div class="imgwrap">
+                                            <img src="img/cart/cart-product2.png" alt="img">
+                                        </div>
+                                        <div class="descrwrap">
+                                            <p class="prname">
+                                                NABALI FAIRKOST Freekeh Frikeh secondo Ottolenghi 250 g
+                                            </p>
+                                            <p class="prweight">
+                                                Weight: 0.45 kg
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="cart__product-count">
+                                        <div class="number">
+                                            <span class="minus"><img src="img/header/minus.svg" alt="minus"></span>
+                                            <input type="number" value="1">
+                                            <span class="plus"><img src="img/header/plus.svg" alt="minus"></span>
+                                        </div>
+                                    </div>
+                                    <div class="cart__product-price">
+                                        <p class="price">$ 22.00</p>
+                                    </div>
+                                    <div class="cart__product-remove">
+                                        <button class="cart__product-removebtn">
+                                            <img src="img/header/delete-icon.svg" alt="remove">
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="shippingest">
+                            <div class="shippingest__header">
+                                <p>
+                                    Shipping estimates
+                                </p>
+                            </div>
+                            <div class="shippingest__body">
+                                <form action="#">
+                                    <p class="destination">Destination: <span>Canada</span></p>
+                                    <div class="inputfield">
+                                        <input type="text" placeholder="ZIP Code">
+                                        <input type="submit" value="Calculate" class="greenbtn">
+                                    </div>
+                                    <p class="totalweight">Total Weight: 0.79 kg</p>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -212,6 +264,7 @@
 
                                     <a href="#" class="greenbtn">
                                         Proceed to checkout
+                                        <img src="img/cart/arrright-white.svg" alt="icon">
                                     </a>
 
                                     <p class="policy">
@@ -224,6 +277,9 @@
                     </div>
                 </div>
             </div>
+
+            <img class="cartbgelem1" src="img/background-elements/bgelem7.png" alt="img">
+            <img class="cartbgelem2" src="img/background-elements/bgelem8.png" alt="img">
         </div>
     </main>
 
