--- a/sitemap.html
+++ b/sitemap.html
@@ -25,6 +25,7 @@
             <li><a target="_blank" href="product-page.html">Product page</a></li>
             <li><a target="_blank" href="send-feedback.html">Send feedback</a></li>
             <li><a target="_blank" href="cart-page.html">Cart page</a></li>
+            <li><a target="_blank" href="checkout.html">Checkout</a></li>
         </ul>
     </div>
 
