--- a/sitemap.html
+++ b/sitemap.html
@@ -26,6 +26,9 @@
             <li><a target="_blank" href="send-feedback.html">Send feedback</a></li>
             <li><a target="_blank" href="cart-page.html">Cart page</a></li>
             <li><a target="_blank" href="checkout.html">Checkout</a></li>
+            <li><a target="_blank" href="checkout-edit.html">Checkout - edit</a></li>
+            <li><a target="_blank" href="checkout-ty.html">Checkout - Thank you</a></li>
+            <li><a target="_blank" href="recipes-center.html">Recipes center </a></li>
         </ul>
     </div>
 
