--- a/recipes-center.html
+++ b/recipes-center.html
@@ -340,7 +340,7 @@
                 <div class="infosectwrap">
                     <img class="infosect__bg" src="img/recipes/infosect-bg.png" alt="bg">
                     <div class="row">
-                        <div class="col-lg-6 d-flex align-items-center">
+                        <div class="col-md-6 col-sm-7 d-flex align-items-center">
                             <div class="infosect__descr">
                                 <h3>Your Own Recipes</h3>
                                 <p>
@@ -350,7 +350,7 @@
                                 <a href="#">Create a recipe</a>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6 col-sm-5">
                             <div class="infosect__img">
                                 <img src="img/recipes/infosectpic.png" alt="img">
                             </div>
@@ -517,7 +517,7 @@
                     <p>All Recipes</p>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="recipesslide">
                             <div class="recipesslide__imgwrap">
                                 <img src="img/recipes/recimg1.png" alt="img">
@@ -548,7 +548,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="recipesslide">
                             <div class="recipesslide__imgwrap">
                                 <img src="img/recipes/recimg2.png" alt="img">
@@ -579,7 +579,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="recipesslide">
                             <div class="recipesslide__imgwrap">
                                 <img src="img/recipes/recimg3.png" alt="img">
@@ -597,7 +597,7 @@
                                         </li>
                                         <li>
                                             <img src="img/main/recipes-ic3.svg" alt="icon">
-                                            1hour, 30 min
+                                            1.5 hours
                                         </li>
                                     </ul>
                                 </div>
@@ -610,7 +610,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="recipesslide">
                             <div class="recipesslide__imgwrap">
                                 <img src="img/recipes/recimg4.png" alt="img">
@@ -641,13 +641,179 @@
                             </div>
                         </div>
                     </div>
-                   
+                    <div class="col-lg-4 col-md-6">
+                        <div class="recipesslide">
+                            <div class="recipesslide__imgwrap">
+                                <img src="img/recipes/recimg5.png" alt="img">
+                            </div>
+                            <div class="recipesslide__descr">
+                                <div class="recipesslide__info">
+                                    <ul>
+                                        <li>
+                                            <img src="img/main/recipes-ic1.svg" alt="icon">
+                                            Dairy
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic2.svg" alt="icon">
+                                            4 Servings
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic3.svg" alt="icon">
+                                            30 min
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p class="recipesslide__title">
+                                    Morning energy Smoothie
+                                </p>
+                                <div class="recipesslide__readmore">
+                                    <a href="#" class="greenarrlink">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="recipesslide">
+                            <div class="recipesslide__imgwrap">
+                                <img src="img/recipes/recimg6.png" alt="img">
+                            </div>
+                            <div class="recipesslide__descr">
+                                <div class="recipesslide__info">
+                                    <ul>
+                                        <li>
+                                            <img src="img/main/recipes-ic4.svg" alt="icon">
+                                            Parve
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic2.svg" alt="icon">
+                                            6-8 Servings
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic3.svg" alt="icon">
+                                            20 min
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p class="recipesslide__title">
+                                    Vegan Herb Dip (Green veggie garlic sauce)
+                                </p>
+                                <div class="recipesslide__readmore">
+                                    <a href="#" class="greenarrlink">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="recipesslide">
+                            <div class="recipesslide__imgwrap">
+                                <img src="img/recipes/recimg7.png" alt="img">
+                            </div>
+                            <div class="recipesslide__descr">
+                                <div class="recipesslide__info">
+                                    <ul>
+                                        <li>
+                                            <img src="img/main/recipes-ic4.svg" alt="icon">
+                                            Parve
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic2.svg" alt="icon">
+                                            2 Servings
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic3.svg" alt="icon">
+                                            20 min
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p class="recipesslide__title">
+                                    Banana Crepes (Gluten Free, Sugar Free)
+                                </p>
+                                <div class="recipesslide__readmore">
+                                    <a href="#" class="greenarrlink">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="recipesslide">
+                            <div class="recipesslide__imgwrap">
+                                <img src="img/recipes/recimg8.png" alt="img">
+                            </div>
+                            <div class="recipesslide__descr">
+                                <div class="recipesslide__info">
+                                    <ul>
+                                        <li>
+                                            <img src="img/main/recipes-ic1.svg" alt="icon">
+                                            Dairy
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic2.svg" alt="icon">
+                                            4 Servings
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic3.svg" alt="icon">
+                                            30 min
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p class="recipesslide__title">
+                                    Sweet Potato And Cheddar Croquettes Recipe
+                                </p>
+                                <div class="recipesslide__readmore">
+                                    <a href="#" class="greenarrlink">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="recipesslide">
+                            <div class="recipesslide__imgwrap">
+                                <img src="img/recipes/recimg9.png" alt="img">
+                            </div>
+                            <div class="recipesslide__descr">
+                                <div class="recipesslide__info">
+                                    <ul>
+                                        <li>
+                                            <img src="img/main/recipes-ic4.svg" alt="icon">
+                                            Parve
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic2.svg" alt="icon">
+                                            10 Servings
+                                        </li>
+                                        <li>
+                                            <img src="img/main/recipes-ic3.svg" alt="icon">
+                                            40 min
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p class="recipesslide__title">
+                                    Best caramel popcorn
+                                </p>
+                                <div class="recipesslide__readmore">
+                                    <a href="#" class="greenarrlink">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                
+                <div class="pagination">
+                    <ul>
+                        <li><a href="#"><img src="img/general/pagination-prev.svg" alt="prev"></a></li>
+                        <li><a href="#">1</a></li>
+                        <li class="active"><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li>...</li>
+                        <li><a href="#">11</a></li>
+                        <li><a href="#"><img src="img/general/pagination-next.svg" alt="next"></a></li>
+                    </ul>
+                </div>
 
             </div>
         </section>
+
+
 
 
 
@@ -718,11 +884,11 @@
         </div>
     </footer>
 
-
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/swiper.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/lib/imageuploadify.min.js"></script>
+
     <script src="js/common.js"></script>
 </body>
 
