--- a/sitemap.html
+++ b/sitemap.html
@@ -29,6 +29,8 @@
             <li><a target="_blank" href="checkout-edit.html">Checkout - edit</a></li>
             <li><a target="_blank" href="checkout-ty.html">Checkout - Thank you</a></li>
             <li><a target="_blank" href="recipes-center.html">Recipes center</a></li>
+            <li><a target="_blank" href="recipes-center-selected-cat.html">Recipes center (selected category)</a></li>
+            <li><a target="_blank" href="recipes-center-selected-recipe.html">Recipes center (selected recipe)</a></li>
         </ul>
     </div>
 
