--- a/sitemap.html
+++ b/sitemap.html
@@ -31,6 +31,8 @@
             <li><a target="_blank" href="recipes-center.html">Recipes center</a></li>
             <li><a target="_blank" href="recipes-center-selected-cat.html">Recipes center (selected category)</a></li>
             <li><a target="_blank" href="recipes-center-selected-recipe.html">Recipes center (selected recipe)</a></li>
+            <li><a target="_blank" href="create-recipe.html">Create recipe</a></li>
+            <li><a target="_blank" href="recipes-favorite.html">Recipes Faforite</a></li>
         </ul>
     </div>
 
