--- a/sitemap.html
+++ b/sitemap.html
@@ -33,6 +33,8 @@
             <li><a target="_blank" href="recipes-center-selected-recipe.html">Recipes center (selected recipe)</a></li>
             <li><a target="_blank" href="create-recipe.html">Create recipe</a></li>
             <li><a target="_blank" href="recipes-favorite.html">Recipes Faforite</a></li>
+            <li><a target="_blank" href="blog.html">Community blog</a></li>
+            <li><a target="_blank" href="blog-post.html">Blog post</a></li>
         </ul>
     </div>
 
